tests/cve/cve_2020_36470_1.stderr
error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/cve/cve_2020_36470_1.rs:34:32
   |
34 |       let handle = thread::spawn(move || {
   |  __________________-------------_^
   | |                  |
   | |                  required by a bound introduced by this call
35 | |         drop(buffer);
36 | |     });
   | |_____^ `*mut ()` cannot be sent between threads safely
   |
   = help: within `NonSend`, the trait `Send` is not implemented for `*mut ()`
   = note: required because it appears within the type `PhantomData<*mut ()>`
note: required because it appears within the type `NonSend`
  --> tests/cve/cve_2020_36470_1.rs:8:8
   |
8  | struct NonSend {
   |        ^^^^^^^
   = note: required for `RingBuffer<NonSend>` to implement `Send`
note: required because it's used within this closure
  --> tests/cve/cve_2020_36470_1.rs:34:32
   |
34 |     let handle = thread::spawn(move || {
   |                                ^^^^^^^
note: required by a bound in `std::thread::spawn`
  --> $RUST/std/src/thread/mod.rs
   |
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
